@@ -32,6 +32,7 @@ extern "C" {
 #define	G_MODULE_IMPL_OS2	4
 #define	G_MODULE_IMPL_BEOS	5
 #define	G_MODULE_IMPL_DYLD	6
+#define	G_MODULE_IMPL_AR	7
 
 #define	G_MODULE_IMPL		@G_MODULE_IMPL@
 #undef	G_MODULE_HAVE_DLERROR
